# FileRAIIDemo

./: FileRAIIDemo.sln  README.md  build.rar
FileRAIIDemo/: CMakeLists.txt  File.cpp  File.hpp  FileRAIIDemo.vcxproj  FileRAIIDemo.vcxproj.filters  demo.txt  main.cpp  zero.docx
